Remove 100% viewport width from game-information class to prevent overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,8 +108,7 @@ h1 {
 }
 
 h3 {
-    background-color:  #B084CC;
-    border: solid 0.1rem  rgb(255, 255, 23);
+
     color:  rgb(255, 255, 23);
     justify-items: center;
     font-size: 1.5rem;
